hard-gists/2019037/run.log
=== Docker Run Log for 2019037 ===
Started at: Mi 29. Okt 12:56:48 CET 2025

[2025-10-29 12:56:48] START: Running container for 2019037
[2025-10-29 12:56:48] SUCCESS: Container 6eae788bcba75153bf2a8fc37ec396d6f86721862519ed5b3ccd87c6425d4958 started for 2019037
=== Container logs for 2019037 ===
  File "/snippet.py", line 69
    except (UserError, UserWarning, NotLogged,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 2019037 ===
[2025-10-29 12:56:50] INFO: Container 6eae788bcba75153bf2a8fc37ec396d6f86721862519ed5b3ccd87c6425d4958 has stopped
